--- a/ABSmartly.DotNet.Standard/ABSmartly.DotNet.Standard.csproj
+++ b/ABSmartly.DotNet.Standard/ABSmartly.DotNet.Standard.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>ABSmartly</RootNamespace>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
 </Project>
