--- a/ABSmartly.DotNet.Standard/ABSmartly.DotNet.Standard.csproj
+++ b/ABSmartly.DotNet.Standard/ABSmartly.DotNet.Standard.csproj
@@ -1,9 +1,18 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>ABSmartly</RootNamespace>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="DotNet\Nio\Charset\" />
+    <Folder Include="DotNet\Time\Internal\" />
+    <Folder Include="DotNet\Util\" />
+    <Folder Include="Internal\Hashing\" />
+    <Folder Include="JsonExpressions\Operators\" />
+    <Folder Include="Json\" />
+  </ItemGroup>
 
 </Project>
