--- a/ABSmartly.DotNet.Standard/ABSmartly.DotNet.Standard.csproj
+++ b/ABSmartly.DotNet.Standard/ABSmartly.DotNet.Standard.csproj
@@ -16,4 +16,8 @@
     <Folder Include="Temp\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
+  </ItemGroup>
+
 </Project>
