--- a/ABSmartly.DotNet.Standard/ABSmartly.DotNet.Standard.csproj
+++ b/ABSmartly.DotNet.Standard/ABSmartly.DotNet.Standard.csproj
@@ -16,7 +16,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
+    <PackageReference Include="System.Net.Http.Json" Version="6.0.0" />
     <PackageReference Include="System.Text.Json" Version="6.0.5" />
   </ItemGroup>
 
