[Standard.Tests, Standard] MD5: finished and refactored, Unit Test coverage added

--- a/ABSmartly.DotNet.Standard.UnitTests/ABSmartly.DotNet.Standard.UnitTests.csproj
+++ b/ABSmartly.DotNet.Standard.UnitTests/ABSmartly.DotNet.Standard.UnitTests.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\ABSmartly.DotNet.Standard\ABSmartly.DotNet.Standard.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Internal\Hashing\" />
+  </ItemGroup>
+
 </Project>
