--- a/ABSmartly.DotNet.Standard/ABSmartly.DotNet.Standard.csproj
+++ b/ABSmartly.DotNet.Standard/ABSmartly.DotNet.Standard.csproj
@@ -13,6 +13,7 @@
     <Folder Include="Internal\Hashing\" />
     <Folder Include="JsonExpressions\Operators\" />
     <Folder Include="Json\" />
+    <Folder Include="Utils\Extensions\" />
   </ItemGroup>
 
   <ItemGroup>
