[Standard.Tests] HashingTests: added

--- a/ABSmartly.DotNet.Standard.UnitTests/ABSmartly.DotNet.Standard.UnitTests.csproj
+++ b/ABSmartly.DotNet.Standard.UnitTests/ABSmartly.DotNet.Standard.UnitTests.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Internal\Hashing\" />
+    <Folder Include="Internal\HashingTests\" />
   </ItemGroup>
 
 </Project>
