--- a/ABSmartly.DotNet.Standard.UnitTests/ABSmartly.DotNet.Standard.UnitTests.csproj
+++ b/ABSmartly.DotNet.Standard.UnitTests/ABSmartly.DotNet.Standard.UnitTests.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
+    <PackageReference Include="Moq" Version="4.18.1" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
     <PackageReference Include="NUnit.Analyzers" Version="3.3.0" />
@@ -18,10 +19,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ABSmartly.DotNet.Standard\ABSmartly.DotNet.Standard.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Internal\HashingTests\" />
   </ItemGroup>
 
 </Project>
