--- a/ABSmartly.DotNet.Standard.UnitTests/ABSmartly.DotNet.Standard.UnitTests.csproj
+++ b/ABSmartly.DotNet.Standard.UnitTests/ABSmartly.DotNet.Standard.UnitTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -19,6 +19,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ABSmartly.DotNet.Standard\ABSmartly.DotNet.Standard.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="TestUtils\" />
   </ItemGroup>
 
 </Project>
