--- a/ABSmartly.DotNet.Examples.WPF/ABSmartly.DotNet.Examples.WPF.csproj
+++ b/ABSmartly.DotNet.Examples.WPF/ABSmartly.DotNet.Examples.WPF.csproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{830D5EF2-9D4D-4387-A937-D6CC5712EAAD}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>WPF</RootNamespace>
+    <RootNamespace>ABSmartlyDotNetExamples.WPF</RootNamespace>
     <AssemblyName>ABSmartly.DotNet.Examples.WPF</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
