--- a/ABSmartly.DotNet.Examples.WPF/ABSmartly.DotNet.Examples.WPF.csproj
+++ b/ABSmartly.DotNet.Examples.WPF/ABSmartly.DotNet.Examples.WPF.csproj
@@ -127,5 +127,13 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection">
+      <Version>6.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Http">
+      <Version>6.0.0</Version>
+    </PackageReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
