[Examples.WPF, Examples.Blazor, Standard] Examples.WPF: Sdk init readded
Examples.Blazor.Server:
Service injection started (program.cs)

ABSmarty:
ServiceCollectionExtensions started for DI registration

--- a/ABSmartly.DotNet.Examples.Blazor/Server/ABSmartly.DotNet.Examples.Blazor.Server.csproj
+++ b/ABSmartly.DotNet.Examples.Blazor/Server/ABSmartly.DotNet.Examples.Blazor.Server.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\ABSmartly.DotNet.Standard\ABSmartly.DotNet.Standard.csproj" />
     <ProjectReference Include="..\Client\ABSmartly.DotNet.Examples.Blazor.Client.csproj" />
     <ProjectReference Include="..\Shared\ABSmartly.DotNet.Examples.Blazor.Shared.csproj" />
   </ItemGroup>
