--- a/ABSmartly.DotNet.Standard.UnitTests/ABSmartly.DotNet.Standard.UnitTests.csproj
+++ b/ABSmartly.DotNet.Standard.UnitTests/ABSmartly.DotNet.Standard.UnitTests.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="DefaultServiceImplementationsTests\" />
     <Folder Include="TestUtils\" />
   </ItemGroup>
 
