[Standard.Tests, Standard] DefaultAudienceDeserializer reworked: - ByteConverter helper class created (byte conversion moved out from the logic) - Json changed to Newtonsoft (object related issue)
JsonUtils:
- ParseJsonDictionaryOfStringObject helper function added on the top of ParseJsonObject

DefaultAudienceDeserializerTests:
- created, passing

--- a/ABSmartly.DotNet.Standard/ABSmartly.DotNet.Standard.csproj
+++ b/ABSmartly.DotNet.Standard/ABSmartly.DotNet.Standard.csproj
@@ -12,6 +12,7 @@
     <Folder Include="DotNet\Time\Internal\" />
     <Folder Include="JsonExpressions\Operators\" />
     <Folder Include="Json\" />
+    <Folder Include="Utils\Converters\" />
   </ItemGroup>
 
   <ItemGroup>
