[Standard, Standard.Tests] AudienceMatcher: return value changed to bool? Result object: deleted
AudienceMatcherTests: added, 95% coverage
1 test fails -> check tomorrow
add 1 extra test with IAudienceDeserializer mock to return null

--- a/ABSmartly.DotNet.Standard.UnitTests/ABSmartly.DotNet.Standard.UnitTests.csproj
+++ b/ABSmartly.DotNet.Standard.UnitTests/ABSmartly.DotNet.Standard.UnitTests.csproj
@@ -23,7 +23,7 @@
 
   <ItemGroup>
     <Folder Include="DefaultServiceImplementationsTests\" />
-    <Folder Include="TestUtils\" />
+    <Folder Include="_TestUtils\" />
   </ItemGroup>
 
 </Project>
