--- a/ABSmartly.DotNet.Examples.Blazor/Server/appsettings.Development.json
+++ b/ABSmartly.DotNet.Examples.Blazor/Server/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ABSmartlyConfig": {
+    "Prefix": "",
+    "Environment": "Debug",
+    "Application": "ABSmartly.DotNet.Examples.Blazor.Server",
+    "Endpoint": "",
+    "ApiKey": ""
   }
 }
