[Standard] .Net 6 Dependency injection continued

--- a/ABSmartly.DotNet.Examples.Blazor/Server/appsettings.json
+++ b/ABSmartly.DotNet.Examples.Blazor/Server/appsettings.json
@@ -6,4 +6,12 @@
     }
   },
   "AllowedHosts": "*"
+
+  //"ABSmartlyConfig": {
+  //  "Prefix": "",
+  //  "Environment": "Debug",
+  //  "Application": "ABSmartly.DotNet.Examples.Blazor.Server",
+  //  "Endpoint": "",
+  //  "ApiKey": ""
+  //}
 }
