--- a/ABSmartly.DotNet.Examples.Blazor/Client/ABSmartly.DotNet.Examples.Blazor.Client.csproj
+++ b/ABSmartly.DotNet.Examples.Blazor/Client/ABSmartly.DotNet.Examples.Blazor.Client.csproj
@@ -16,4 +16,13 @@
     <ProjectReference Include="..\Shared\ABSmartly.DotNet.Examples.Blazor.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="wwwroot\appsettings.Development.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
