--- a/ABSmartly.DotNet.Examples.Blazor/Shared/ABSmartly.DotNet.Examples.Blazor.Shared.csproj
+++ b/ABSmartly.DotNet.Examples.Blazor/Shared/ABSmartly.DotNet.Examples.Blazor.Shared.csproj
@@ -10,4 +10,12 @@
   <ItemGroup>
     <SupportedPlatform Include="browser" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ABSmartlyServiceImplementations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\ABSmartly.DotNet.Standard\ABSmartly.DotNet.Standard.csproj" />
+  </ItemGroup>
 </Project>
