--- a/examples/Blazor/ABSmartlyExamples.SkiResortApp/appsettings.Development.json
+++ b/examples/Blazor/ABSmartlyExamples.SkiResortApp/appsettings.Development.json
@@ -9,7 +9,7 @@
   "ABSmartly": {
     "Environment": "prod",
     "Application": "www",
-    "Endpoint": "https://demo.absmartly.io/v1",
-    "ApiKey": "x3ZyxmeKmb6n3VilTGs5I6-tBdaS9gYyr3i4YQXmUZcpPhH8nd8ev44NoEL_3yvA"
+    "Endpoint": "https://acme.absmartly.io/v1",
+    "ApiKey": "YOUR_API_KEY"
   }
 }
