--- a/examples/Blazor/ABSmartlyExamples.SkiResortApp/ABSmartlyExamples.SkiResortApp.csproj
+++ b/examples/Blazor/ABSmartlyExamples.SkiResortApp/ABSmartlyExamples.SkiResortApp.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\..\src\ABSmartly.Sdk\ABSmartly.Sdk.csproj"/>
+      <PackageReference Include="ABSmartly.Sdk" Version="1.1.1" />
     </ItemGroup>
 
 </Project>
