--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,6 @@
 name: Publish Nuget
 on:
   push:
-    branches:
-      - "main"
     tags:
       - v*
 jobs:
@@ -25,6 +23,6 @@ jobs:
           NUGET_AUTH_TOKEN: ${{secrets.NUGET_AUTH_TOKEN}}
         
       - name: Run Release
-        run: dotnet nuget push src/ABSmartly.Sdk/bin/Debug/ --api-key $NUGET_AUTH_TOKEN --source https://api.nuget.org/v3/index.json
+        run: dotnet nuget push src/ABSmartly.Sdk/bin/Debug/ -k $NUGET_AUTH_TOKEN -s https://api.nuget.org/v3/index.json
         env:
           NUGET_AUTH_TOKEN: ${{secrets.NUGET_AUTH_TOKEN}}
