Fixing Release Pipeline

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,6 +30,6 @@ jobs:
           NUGET_AUTH_TOKEN: ${{secrets.NUGET_AUTH_TOKEN}}
         
       - name: Run Release
-        run: dotnet nuget push src/ABSmartly.Sdk/bin/Debug/ --source https://api.nuget.org/v3/index.json --api-key $NUGET_AUTH_TOKEN
+        run: dotnet nuget push src/ABSmartly.Sdk/bin/Debug/ --source https://api.nuget.org/v3/index.json --api-key %NUGET_AUTH_TOKEN
         env:
           NUGET_AUTH_TOKEN: ${{secrets.NUGET_AUTH_TOKEN}}
